--- a/streekbieren-avond-backend/appsettings.json
+++ b/streekbieren-avond-backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\sqlexpress;Database=Streekbieren;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
